src/yini_test/cases/golden/strict/valid/comments/slash-comments.strict.yini
@yini strict

// Full-line slash comment before a section.
^ Application
// Full-line slash comment before a member.
name = "strict-slash-comments"
enabled = true

/END
