src/yini_test/cases/golden/strict/invalid/sections/section-level-jump.strict.yini
@yini strict

^ Root
name = "strict-section-level-jump"

^^^ GrandChild
value = true

/END
